parser.output
   0  $accept : %entry% $end

   1  program : stmt_list EOF

   2  typ : INT
   3      | FLOAT
   4      | BOOL
   5      | CHAR
   6      | STRING
   7      | VOID
   8      | FUN
   9      | CLASS ID

  10  vdecl : typ ID SEMI
  11        | typ ID ASSIGN expr SEMI

  12  mthfdecl : typ ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE

  13  constr : CONSTRUCTOR LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE

  14  cbody :
  15        | cbody vdecl
  16        | cbody constr
  17        | cbody mthfdecl

  18  cdecl : CLASS ID LBRACE cbody RBRACE

  19  fdecl : FUNCTION typ ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE

  20  fexpr : FUNCTION typ LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE

  21  formals_opt :
  22              | formal_list

  23  formal_list : typ ID
  24              | formal_list COMMA typ ID

  25  stmt_list : stmt
  26            | stmt_list stmt

  27  stmt : expr SEMI
  28       | vdecl
  29       | fdecl
  30       | cdecl
  31       | RETURN expr SEMI
  32       | RETURN SEMI
  33       | LBRACE stmt_list RBRACE
  34       | IF LPAREN expr RPAREN stmt
  35       | IF LPAREN expr RPAREN stmt ELSE stmt
  36       | FOR LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt
  37       | WHILE LPAREN expr RPAREN stmt

  38  expr_opt :
  39           | expr

  40  primary_expr : THIS
  41               | ID

  42  member_expr : primary_expr
  43              | LPAREN fexpr RPAREN
  44              | member_expr LBRACKET expr RBRACKET
  45              | member_expr DOT ID
  46              | NEW ID LPAREN actuals_opt RPAREN

  47  call_expr : member_expr LPAREN actuals_opt RPAREN
  48            | call_expr LPAREN actuals_opt RPAREN
  49            | call_expr LBRACKET expr RBRACKET
  50            | call_expr DOT ID

  51  expr : INTLIT
  52       | FLOATLIT
  53       | CHARLIT
  54       | STRINGLIT
  55       | TRUE
  56       | FALSE
  57       | ID
  58       | fexpr
  59       | expr PLUS expr
  60       | expr MINUS expr
  61       | expr TIMES expr
  62       | expr DIVIDE expr
  63       | expr MOD expr
  64       | expr EQ expr
  65       | expr NEQ expr
  66       | expr LT expr
  67       | expr LEQ expr
  68       | expr GT expr
  69       | expr GEQ expr
  70       | expr AND expr
  71       | expr OR expr
  72       | MINUS expr
  73       | NOT expr
  74       | expr ASSIGN expr
  75       | call_expr
  76       | LPAREN expr RPAREN

  77  actuals_opt :
  78              | actuals_list

  79  actuals_list : expr
  80               | actuals_list COMMA expr

  81  %entry% : '\001' program

state 0
	$accept : . %entry% $end  (0)

	'\001'  shift 1
	.  error

	%entry%  goto 2


state 1
	%entry% : '\001' . program  (81)

	FUNCTION  shift 3
	CLASS  shift 4
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	LBRACE  shift 8
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	RETURN  shift 13
	IF  shift 14
	FOR  shift 15
	WHILE  shift 16
	INT  shift 17
	FLOAT  shift 18
	BOOL  shift 19
	CHAR  shift 20
	STRING  shift 21
	VOID  shift 22
	FUN  shift 23
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	program  goto 29
	stmt_list  goto 30
	typ  goto 31
	vdecl  goto 32
	expr  goto 33
	cdecl  goto 34
	fdecl  goto 35
	fexpr  goto 36
	stmt  goto 37
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 2
	$accept : %entry% . $end  (0)

	$end  accept


state 3
	fdecl : FUNCTION . typ ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (19)
	fexpr : FUNCTION . typ LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (20)

	CLASS  shift 41
	INT  shift 17
	FLOAT  shift 18
	BOOL  shift 19
	CHAR  shift 20
	STRING  shift 21
	VOID  shift 22
	FUN  shift 23
	.  error

	typ  goto 42


state 4
	typ : CLASS . ID  (9)
	cdecl : CLASS . ID LBRACE cbody RBRACE  (18)

	ID  shift 43
	.  error


state 5
	primary_expr : THIS .  (40)

	.  reduce 40


state 6
	member_expr : NEW . ID LPAREN actuals_opt RPAREN  (46)

	ID  shift 44
	.  error


state 7
	member_expr : LPAREN . fexpr RPAREN  (43)
	expr : LPAREN . expr RPAREN  (76)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	expr  goto 46
	fexpr  goto 47
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 8
	stmt : LBRACE . stmt_list RBRACE  (33)

	FUNCTION  shift 3
	CLASS  shift 4
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	LBRACE  shift 8
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	RETURN  shift 13
	IF  shift 14
	FOR  shift 15
	WHILE  shift 16
	INT  shift 17
	FLOAT  shift 18
	BOOL  shift 19
	CHAR  shift 20
	STRING  shift 21
	VOID  shift 22
	FUN  shift 23
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	stmt_list  goto 48
	typ  goto 31
	vdecl  goto 32
	expr  goto 33
	cdecl  goto 34
	fdecl  goto 35
	fexpr  goto 36
	stmt  goto 37
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 9
	expr : MINUS . expr  (72)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	expr  goto 49
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 10
	expr : NOT . expr  (73)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	expr  goto 50
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 11
	expr : TRUE .  (55)

	.  reduce 55


state 12
	expr : FALSE .  (56)

	.  reduce 56


state 13
	stmt : RETURN . expr SEMI  (31)
	stmt : RETURN . SEMI  (32)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	SEMI  shift 51
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	expr  goto 52
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 14
	stmt : IF . LPAREN expr RPAREN stmt  (34)
	stmt : IF . LPAREN expr RPAREN stmt ELSE stmt  (35)

	LPAREN  shift 53
	.  error


state 15
	stmt : FOR . LPAREN expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (36)

	LPAREN  shift 54
	.  error


state 16
	stmt : WHILE . LPAREN expr RPAREN stmt  (37)

	LPAREN  shift 55
	.  error


state 17
	typ : INT .  (2)

	.  reduce 2


state 18
	typ : FLOAT .  (3)

	.  reduce 3


state 19
	typ : BOOL .  (4)

	.  reduce 4


state 20
	typ : CHAR .  (5)

	.  reduce 5


state 21
	typ : STRING .  (6)

	.  reduce 6


state 22
	typ : VOID .  (7)

	.  reduce 7


state 23
	typ : FUN .  (8)

	.  reduce 8


state 24
	expr : INTLIT .  (51)

	.  reduce 51


state 25
	expr : FLOATLIT .  (52)

	.  reduce 52


state 26
	expr : CHARLIT .  (53)

	.  reduce 53


state 27
	expr : STRINGLIT .  (54)

	.  reduce 54


state 28
	primary_expr : ID .  (41)
	expr : ID .  (57)

	SEMI  reduce 57
	LPAREN  reduce 41
	RPAREN  reduce 57
	COMMA  reduce 57
	LBRACKET  reduce 41
	RBRACKET  reduce 57
	DOT  reduce 41
	PLUS  reduce 57
	MINUS  reduce 57
	TIMES  reduce 57
	DIVIDE  reduce 57
	MOD  reduce 57
	ASSIGN  reduce 57
	EQ  reduce 57
	NEQ  reduce 57
	LT  reduce 57
	LEQ  reduce 57
	GT  reduce 57
	GEQ  reduce 57
	AND  reduce 57
	OR  reduce 57


state 29
	%entry% : '\001' program .  (81)

	.  reduce 81


state 30
	program : stmt_list . EOF  (1)
	stmt_list : stmt_list . stmt  (26)

	FUNCTION  shift 3
	CLASS  shift 4
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	LBRACE  shift 8
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	RETURN  shift 13
	IF  shift 14
	FOR  shift 15
	WHILE  shift 16
	INT  shift 17
	FLOAT  shift 18
	BOOL  shift 19
	CHAR  shift 20
	STRING  shift 21
	VOID  shift 22
	FUN  shift 23
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	EOF  shift 56
	.  error

	typ  goto 31
	vdecl  goto 32
	expr  goto 33
	cdecl  goto 34
	fdecl  goto 35
	fexpr  goto 36
	stmt  goto 57
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 31
	vdecl : typ . ID SEMI  (10)
	vdecl : typ . ID ASSIGN expr SEMI  (11)

	ID  shift 58
	.  error


state 32
	stmt : vdecl .  (28)

	.  reduce 28


state 33
	stmt : expr . SEMI  (27)
	expr : expr . PLUS expr  (59)
	expr : expr . MINUS expr  (60)
	expr : expr . TIMES expr  (61)
	expr : expr . DIVIDE expr  (62)
	expr : expr . MOD expr  (63)
	expr : expr . EQ expr  (64)
	expr : expr . NEQ expr  (65)
	expr : expr . LT expr  (66)
	expr : expr . LEQ expr  (67)
	expr : expr . GT expr  (68)
	expr : expr . GEQ expr  (69)
	expr : expr . AND expr  (70)
	expr : expr . OR expr  (71)
	expr : expr . ASSIGN expr  (74)

	SEMI  shift 59
	PLUS  shift 60
	MINUS  shift 61
	TIMES  shift 62
	DIVIDE  shift 63
	MOD  shift 64
	ASSIGN  shift 65
	EQ  shift 66
	NEQ  shift 67
	LT  shift 68
	LEQ  shift 69
	GT  shift 70
	GEQ  shift 71
	AND  shift 72
	OR  shift 73
	.  error


state 34
	stmt : cdecl .  (30)

	.  reduce 30


state 35
	stmt : fdecl .  (29)

	.  reduce 29


state 36
	expr : fexpr .  (58)

	.  reduce 58


state 37
	stmt_list : stmt .  (25)

	.  reduce 25


state 38
	member_expr : primary_expr .  (42)

	.  reduce 42


state 39
	member_expr : member_expr . LBRACKET expr RBRACKET  (44)
	member_expr : member_expr . DOT ID  (45)
	call_expr : member_expr . LPAREN actuals_opt RPAREN  (47)

	LPAREN  shift 74
	LBRACKET  shift 75
	DOT  shift 76
	.  error


state 40
	call_expr : call_expr . LPAREN actuals_opt RPAREN  (48)
	call_expr : call_expr . LBRACKET expr RBRACKET  (49)
	call_expr : call_expr . DOT ID  (50)
	expr : call_expr .  (75)

	LPAREN  shift 77
	LBRACKET  shift 78
	DOT  shift 79
	SEMI  reduce 75
	RPAREN  reduce 75
	COMMA  reduce 75
	RBRACKET  reduce 75
	PLUS  reduce 75
	MINUS  reduce 75
	TIMES  reduce 75
	DIVIDE  reduce 75
	MOD  reduce 75
	ASSIGN  reduce 75
	EQ  reduce 75
	NEQ  reduce 75
	LT  reduce 75
	LEQ  reduce 75
	GT  reduce 75
	GEQ  reduce 75
	AND  reduce 75
	OR  reduce 75


state 41
	typ : CLASS . ID  (9)

	ID  shift 80
	.  error


state 42
	fdecl : FUNCTION typ . ID LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (19)
	fexpr : FUNCTION typ . LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (20)

	LPAREN  shift 81
	ID  shift 82
	.  error


state 43
	typ : CLASS ID .  (9)
	cdecl : CLASS ID . LBRACE cbody RBRACE  (18)

	LBRACE  shift 83
	ID  reduce 9


state 44
	member_expr : NEW ID . LPAREN actuals_opt RPAREN  (46)

	LPAREN  shift 84
	.  error


state 45
	fexpr : FUNCTION . typ LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (20)

	CLASS  shift 41
	INT  shift 17
	FLOAT  shift 18
	BOOL  shift 19
	CHAR  shift 20
	STRING  shift 21
	VOID  shift 22
	FUN  shift 23
	.  error

	typ  goto 85


state 46
	expr : expr . PLUS expr  (59)
	expr : expr . MINUS expr  (60)
	expr : expr . TIMES expr  (61)
	expr : expr . DIVIDE expr  (62)
	expr : expr . MOD expr  (63)
	expr : expr . EQ expr  (64)
	expr : expr . NEQ expr  (65)
	expr : expr . LT expr  (66)
	expr : expr . LEQ expr  (67)
	expr : expr . GT expr  (68)
	expr : expr . GEQ expr  (69)
	expr : expr . AND expr  (70)
	expr : expr . OR expr  (71)
	expr : expr . ASSIGN expr  (74)
	expr : LPAREN expr . RPAREN  (76)

	RPAREN  shift 86
	PLUS  shift 60
	MINUS  shift 61
	TIMES  shift 62
	DIVIDE  shift 63
	MOD  shift 64
	ASSIGN  shift 65
	EQ  shift 66
	NEQ  shift 67
	LT  shift 68
	LEQ  shift 69
	GT  shift 70
	GEQ  shift 71
	AND  shift 72
	OR  shift 73
	.  error


47: shift/reduce conflict (shift 87, reduce 58) on RPAREN
state 47
	member_expr : LPAREN fexpr . RPAREN  (43)
	expr : fexpr .  (58)

	RPAREN  shift 87
	PLUS  reduce 58
	MINUS  reduce 58
	TIMES  reduce 58
	DIVIDE  reduce 58
	MOD  reduce 58
	ASSIGN  reduce 58
	EQ  reduce 58
	NEQ  reduce 58
	LT  reduce 58
	LEQ  reduce 58
	GT  reduce 58
	GEQ  reduce 58
	AND  reduce 58
	OR  reduce 58


state 48
	stmt_list : stmt_list . stmt  (26)
	stmt : LBRACE stmt_list . RBRACE  (33)

	FUNCTION  shift 3
	CLASS  shift 4
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	LBRACE  shift 8
	RBRACE  shift 88
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	RETURN  shift 13
	IF  shift 14
	FOR  shift 15
	WHILE  shift 16
	INT  shift 17
	FLOAT  shift 18
	BOOL  shift 19
	CHAR  shift 20
	STRING  shift 21
	VOID  shift 22
	FUN  shift 23
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	typ  goto 31
	vdecl  goto 32
	expr  goto 33
	cdecl  goto 34
	fdecl  goto 35
	fexpr  goto 36
	stmt  goto 57
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 49
	expr : expr . PLUS expr  (59)
	expr : expr . MINUS expr  (60)
	expr : expr . TIMES expr  (61)
	expr : expr . DIVIDE expr  (62)
	expr : expr . MOD expr  (63)
	expr : expr . EQ expr  (64)
	expr : expr . NEQ expr  (65)
	expr : expr . LT expr  (66)
	expr : expr . LEQ expr  (67)
	expr : expr . GT expr  (68)
	expr : expr . GEQ expr  (69)
	expr : expr . AND expr  (70)
	expr : expr . OR expr  (71)
	expr : MINUS expr .  (72)
	expr : expr . ASSIGN expr  (74)

	.  reduce 72


state 50
	expr : expr . PLUS expr  (59)
	expr : expr . MINUS expr  (60)
	expr : expr . TIMES expr  (61)
	expr : expr . DIVIDE expr  (62)
	expr : expr . MOD expr  (63)
	expr : expr . EQ expr  (64)
	expr : expr . NEQ expr  (65)
	expr : expr . LT expr  (66)
	expr : expr . LEQ expr  (67)
	expr : expr . GT expr  (68)
	expr : expr . GEQ expr  (69)
	expr : expr . AND expr  (70)
	expr : expr . OR expr  (71)
	expr : NOT expr .  (73)
	expr : expr . ASSIGN expr  (74)

	.  reduce 73


state 51
	stmt : RETURN SEMI .  (32)

	.  reduce 32


state 52
	stmt : RETURN expr . SEMI  (31)
	expr : expr . PLUS expr  (59)
	expr : expr . MINUS expr  (60)
	expr : expr . TIMES expr  (61)
	expr : expr . DIVIDE expr  (62)
	expr : expr . MOD expr  (63)
	expr : expr . EQ expr  (64)
	expr : expr . NEQ expr  (65)
	expr : expr . LT expr  (66)
	expr : expr . LEQ expr  (67)
	expr : expr . GT expr  (68)
	expr : expr . GEQ expr  (69)
	expr : expr . AND expr  (70)
	expr : expr . OR expr  (71)
	expr : expr . ASSIGN expr  (74)

	SEMI  shift 89
	PLUS  shift 60
	MINUS  shift 61
	TIMES  shift 62
	DIVIDE  shift 63
	MOD  shift 64
	ASSIGN  shift 65
	EQ  shift 66
	NEQ  shift 67
	LT  shift 68
	LEQ  shift 69
	GT  shift 70
	GEQ  shift 71
	AND  shift 72
	OR  shift 73
	.  error


state 53
	stmt : IF LPAREN . expr RPAREN stmt  (34)
	stmt : IF LPAREN . expr RPAREN stmt ELSE stmt  (35)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	expr  goto 90
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 54
	stmt : FOR LPAREN . expr_opt SEMI expr SEMI expr_opt RPAREN stmt  (36)
	expr_opt : .  (38)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	SEMI  reduce 38

	expr  goto 91
	fexpr  goto 36
	expr_opt  goto 92
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 55
	stmt : WHILE LPAREN . expr RPAREN stmt  (37)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	expr  goto 93
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 56
	program : stmt_list EOF .  (1)

	.  reduce 1


state 57
	stmt_list : stmt_list stmt .  (26)

	.  reduce 26


state 58
	vdecl : typ ID . SEMI  (10)
	vdecl : typ ID . ASSIGN expr SEMI  (11)

	SEMI  shift 94
	ASSIGN  shift 95
	.  error


state 59
	stmt : expr SEMI .  (27)

	.  reduce 27


state 60
	expr : expr PLUS . expr  (59)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	expr  goto 96
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 61
	expr : expr MINUS . expr  (60)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	expr  goto 97
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 62
	expr : expr TIMES . expr  (61)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	expr  goto 98
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 63
	expr : expr DIVIDE . expr  (62)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	expr  goto 99
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 64
	expr : expr MOD . expr  (63)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	expr  goto 100
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 65
	expr : expr ASSIGN . expr  (74)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	expr  goto 101
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 66
	expr : expr EQ . expr  (64)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	expr  goto 102
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 67
	expr : expr NEQ . expr  (65)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	expr  goto 103
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 68
	expr : expr LT . expr  (66)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	expr  goto 104
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 69
	expr : expr LEQ . expr  (67)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	expr  goto 105
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 70
	expr : expr GT . expr  (68)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	expr  goto 106
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 71
	expr : expr GEQ . expr  (69)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	expr  goto 107
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 72
	expr : expr AND . expr  (70)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	expr  goto 108
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 73
	expr : expr OR . expr  (71)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	expr  goto 109
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 74
	call_expr : member_expr LPAREN . actuals_opt RPAREN  (47)
	actuals_opt : .  (77)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	RPAREN  reduce 77

	expr  goto 110
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	actuals_opt  goto 111
	call_expr  goto 40
	actuals_list  goto 112


state 75
	member_expr : member_expr LBRACKET . expr RBRACKET  (44)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	expr  goto 113
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 76
	member_expr : member_expr DOT . ID  (45)

	ID  shift 114
	.  error


state 77
	call_expr : call_expr LPAREN . actuals_opt RPAREN  (48)
	actuals_opt : .  (77)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	RPAREN  reduce 77

	expr  goto 110
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	actuals_opt  goto 115
	call_expr  goto 40
	actuals_list  goto 112


state 78
	call_expr : call_expr LBRACKET . expr RBRACKET  (49)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	.  error

	expr  goto 116
	fexpr  goto 36
	primary_expr  goto 38
	member_expr  goto 39
	call_expr  goto 40


state 79
	call_expr : call_expr DOT . ID  (50)

	ID  shift 117
	.  error


state 80
	typ : CLASS ID .  (9)

	.  reduce 9


state 81
	fexpr : FUNCTION typ LPAREN . formals_opt RPAREN LBRACE stmt_list RBRACE  (20)
	formals_opt : .  (21)

	CLASS  shift 41
	INT  shift 17
	FLOAT  shift 18
	BOOL  shift 19
	CHAR  shift 20
	STRING  shift 21
	VOID  shift 22
	FUN  shift 23
	RPAREN  reduce 21

	typ  goto 118
	formals_opt  goto 119
	formal_list  goto 120


state 82
	fdecl : FUNCTION typ ID . LPAREN formals_opt RPAREN LBRACE stmt_list RBRACE  (19)

	LPAREN  shift 121
	.  error


state 83
	cdecl : CLASS ID LBRACE . cbody RBRACE  (18)
	cbody : .  (14)

	.  reduce 14

	cbody  goto 122


state 84
	member_expr : NEW ID LPAREN . actuals_opt RPAREN  (46)
	actuals_opt : .  (77)

	FUNCTION  shift 45
	THIS  shift 5
	NEW  shift 6
	LPAREN  shift 7
	MINUS  shift 9
	NOT  shift 10
	TRUE  shift 11
	FALSE  shift 12
	INTLIT  shift 24
	FLOATLIT  shift 25
	CHARLIT  shift 26
	STRINGLIT  shift 27
	ID  shift 28
	RPAREN  reduce 77
